# cake

./: .gitignore  Cargo.toml  quad_pipeline_cache
src/backend/: Cargo.toml
src/backend/src/: lib.rs
src/cake/: Cargo.toml  build.rs
src/cake/src/: main-demo.rs  main-old.rs  main.rs
src/cake/src/data/: cake.frag  cake.vert  cube.vert  quad.frag  quad.vert  ui.frag  ui.vert
src/graphics/lib/: Cargo.toml
src/graphics/lib/src/: buffers.rs  device.rs  lib.rs  pipeline.rs  render_pass.rs  shaders.rs  util.rs
src/graphics/macros/: Cargo.toml
src/graphics/macros/src/: lib.rs
src/gui/: Cargo.toml
src/gui/src/: animation.rs  application.rs  elements.rs  lib.rs  macros.rs  util.rs  window.rs
src/midi/: Cargo.toml
src/midi/src/: data.rs  errors.rs  lib.rs  midifile.rs  miditrack.rs  readers.rs
src/util/: Cargo.toml
src/util/src/: fps.rs
src/view/: Cargo.toml
src/view/src/: lib.rs  macros.rs  model.rs  renderer.rs
src/view/src/data/: cake.frag  cake.vert
src/view/src/windows/: main.rs
src/view/src/windows/main/: header.rs  keyboard.rs  midi.rs
