[package]
name = "cake"
version = "0.1.0"
edition = "2018"
workspace = "../.."

[dependencies]
bincode = "1.3.3"
gfx-hal = "0.9.0"
shaderc = "0.7.2"
image = "0.23.14"
serde = { version = "1.0.126", features = ["derive"] }
graphics = { path = "../graphics/lib" }
winit = "0.25.0"
gfx-auxil = "0.10.0"
getset = "0.1.1"

[dependencies.gfx-backend-vulkan]
package = "gfx-backend-vulkan"
version = "0.9.0"
