[package]
name = "cake-gui"
version = "0.1.0"
edition = "2018"
workspace = "../.."

[dependencies]
bincode = "1.3.3"
shaderc = "0.7.2"
image = "0.23.14"
serde = { version = "1.0.126", features = ["derive"] }
winit = "0.24"
getset = "0.1.1"
wgpu = "0.8.1"
imgui = "0.7"
imgui-wgpu = "0.15.1"
stretch = "0.3.2"
to_vec = "0.1.0"
num = "0.4.0"

bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18"
futures = "0.3"
imgui-winit-support = "0.7"
wgpu-subscriber = "0.1"
midi = { path = "../midi", package = "cake-midi" }
