[package]
name = "graphics-macros"
version = "0.1.0"
edition = "2018"
workspace = "../../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx-hal = "0.9.0"
shaderc = "0.7.2"
syn = "1"
proc-macro2 = "1"
quote = "1"

[lib]
proc-macro = true